; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_access.c_bt_mesh_comp_register.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_access.c_bt_mesh_comp_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_mesh_comp = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@dev_comp = common dso_local global %struct.bt_mesh_comp* null, align 8
@mod_init = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bt_mesh_comp_register(%struct.bt_mesh_comp* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.bt_mesh_comp*, align 8
  store %struct.bt_mesh_comp* %0, %struct.bt_mesh_comp** %3, align 8
  %4 = load %struct.bt_mesh_comp*, %struct.bt_mesh_comp** %3, align 8
  %5 = getelementptr inbounds %struct.bt_mesh_comp, %struct.bt_mesh_comp* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @EINVAL, align 4
  %10 = sub nsw i32 0, %9
  store i32 %10, i32* %2, align 4
  br label %15

11:                                               ; preds = %1
  %12 = load %struct.bt_mesh_comp*, %struct.bt_mesh_comp** %3, align 8
  store %struct.bt_mesh_comp* %12, %struct.bt_mesh_comp** @dev_comp, align 8
  %13 = load i32, i32* @mod_init, align 4
  %14 = call i32 @bt_mesh_model_foreach(i32 %13, i32* null)
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %11, %8
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @bt_mesh_model_foreach(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
